Section 2까지 구현 완료

--- a/Section 2 Vue.js 핵심/3. 데이터 바인딩 (Data Binding)/2. 디렉티브.html
+++ b/Section 2 Vue.js 핵심/3. 데이터 바인딩 (Data Binding)/2. 디렉티브.html
@@ -5,7 +5,16 @@
     <script type="module">
       import { createApp } from "https://unpkg.com/vue@3/dist/vue.esm-browser.js";
       const root = {
-        template: "<h1>안녕하세요</h1>",
+        template: `
+        <h1 v-bind:class="classValue"></h1>
+        `,
+        setup() {
+          const classValue = "Hello";
+
+          return {
+            classValue,
+          };
+        },
       };
       const app = createApp(root);
       app.mount("#app");
