--- a/Section 3 디렉티브 (Directive)/1. v-bind/예제 2.html
+++ b/Section 3 디렉티브 (Directive)/1. v-bind/예제 2.html
@@ -6,11 +6,12 @@
       import { createApp } from "https://unpkg.com/vue@3/dist/vue.esm-browser.js";
       const root = {
         template: `
-        <p v-bind:class="myClass"></p>
+          <h1 v-bind:[attrName]="attrVal"></h1>
         `,
         setup() {
           return {
-            myClass: "active",
+            attrName: "id",
+            attrVal: "bye",
           };
         },
       };
