--- a/Section 2 Vue.js 핵심/1. Vue 시작하기/index.html
+++ b/Section 2 Vue.js 핵심/1. Vue 시작하기/index.html
@@ -4,17 +4,8 @@
     <div id="app"></div>
     <script type="module">
       import { createApp } from "https://unpkg.com/vue@3/dist/vue.esm-browser.js";
-      const root = {
-        template: `
-        <input v-model="myValue" />
-        `,
-        setup() {
-          return {
-            myValue: "",
-          };
-        },
-      };
-      const app = createApp(root);
+
+      const app = createApp();
       app.mount("#app");
     </script>
   </body>
