--- a/Section 3 디렉티브 (Directive)/1. v-bind/test.html
+++ b/Section 3 디렉티브 (Directive)/1. v-bind/test.html
@@ -6,16 +6,12 @@
       import { createApp } from "https://unpkg.com/vue@3/dist/vue.esm-browser.js";
       const root = {
         template: `
-          <nav>
-            <a>{{ menu[0] }}</a>
-            <a>{{ menu[1] }}</a>
-            <a>{{ menu[2] }}</a>
-          </nav>
+          <h1 v-bind:[attrName]="attrVal"></h1>
         `,
         setup() {
-          const menu = ["HTML", "CSS", "Javascript"];
           return {
-            menu,
+            attrName: "id",
+            attrVal: "hello",
           };
         },
       };
