--- a/Section 3 디렉티브 (Directive)/1. v-bind/예제 2 속성 이름 데이터 바인딩.html
+++ b/Section 3 디렉티브 (Directive)/1. v-bind/예제 2 속성 이름 데이터 바인딩.html
@@ -6,12 +6,12 @@
       import { createApp } from "https://unpkg.com/vue@3/dist/vue.esm-browser.js";
       const root = {
         template: `
-          <h1 v-bind:[attrName]="attrVal"></h1>
+          <h1 v-bind:[name]="value"></h1>
         `,
         setup() {
           return {
-            attrName: "id",
-            attrVal: "hello",
+            name: "id",
+            value: "bye",
           };
         },
       };
