--- a/Section 3 디렉티브 (Directive)/1. v-bind/예제 3 축약어.html
+++ b/Section 3 디렉티브 (Directive)/1. v-bind/예제 3 축약어.html
@@ -6,16 +6,18 @@
       import { createApp } from "https://unpkg.com/vue@3/dist/vue.esm-browser.js";
       const root = {
         template: `
-          <nav>
-            <a :href="menu[0].toLowerCase()">{{ menu[0] }}</a>
-            <a :href="menu[1].toLowerCase()">{{ menu[1] }}</a>
-            <a :href="menu[2].toLowerCase()">{{ menu[2] }}</a>
-          </nav>
+          <h1 
+            :[name1]="value1" 
+            :[name2]="value2"
+          >
+          </h1>
         `,
         setup() {
-          const menu = ["HTML", "CSS", "Javascript"];
           return {
-            menu,
+            name1: "id",
+            value1: "hello",
+            name2: "class",
+            value2: "bye",
           };
         },
       };
