--- a/Section 3 디렉티브 (Directive)/2. v-for/과제 답.html
+++ b/Section 3 디렉티브 (Directive)/2. v-for/과제 답.html
@@ -3,13 +3,16 @@
   <body>
     <div id="app"></div>
     <script type="module">
-      import { createApp } from "https://unpkg.com/vue@3/dist/vue.esm-browser.js";
+      import {
+        createApp,
+        reactive,
+      } from "https://unpkg.com/vue@3/dist/vue.esm-browser.js";
+
       const root = {
         template: `
           <nav>
-            <a
-              v-for="item of menu"
-              :key="item"
+            <a 
+              v-for="item of menu" 
               :href="item.toLowerCase()"
             >
               {{ item }}
