v-for 과제 답 수정 (key 누락)

--- a/Section 3 디렉티브 (Directive)/2. v-for/과제 답.html
+++ b/Section 3 디렉티브 (Directive)/2. v-for/과제 답.html
@@ -12,7 +12,8 @@
         template: `
           <nav>
             <a 
-              v-for="item of menu" 
+              v-for="item of menu"
+              :key="item"
               :href="item.toLowerCase()"
             >
               {{ item }}
