v-if / v-show 추가

--- a/Section 3 디렉티브 (Directive)/3. v-if v-show/1-1. 과제 답 (v-show).html
+++ b/Section 3 디렉티브 (Directive)/3. v-if v-show/1-1. 과제 답 (v-show).html
@@ -7,17 +7,14 @@
       const root = {
         template: `
           <nav>
-            <template
+            <a
+              v-show="item.length > 3"
               v-for="item of menu"
               :key="item"
+              :href="item.toLowerCase()"
             >
-              <a
-                v-if="item.length > 3"
-                :href="item.toLowerCase()"
-              >
-                {{ item }}
-              </a>
-            </template>
+              {{ item }}
+            </a>
           </nav>
         `,
         setup() {
