v-if 과제 답 수정

--- a/Section 3 디렉티브 (Directive)/3. v-if v-show/1-2. 과제 답 (v-if, template).html
+++ b/Section 3 디렉티브 (Directive)/3. v-if v-show/1-2. 과제 답 (v-if, template).html
@@ -7,14 +7,17 @@
       const root = {
         template: `
           <nav>
-            <a
-              v-show="item.length > 3"
+            <template 
               v-for="item of menu"
               :key="item"
-              :href="item.toLowerCase()"
             >
-              {{ item }}
-            </a>
+              <a
+                v-if="item.length > 3"
+                :href="item.toLowerCase()"
+              >
+                {{ item }}
+              </a>
+            </template>
           </nav>
         `,
         setup() {
