--- a/Section 3 디렉티브 (Directive)/3. v-if v-show/과제 답 1. v-show.html
+++ b/Section 3 디렉티브 (Directive)/3. v-if v-show/과제 답 1. v-show.html
@@ -3,7 +3,10 @@
   <body>
     <div id="app"></div>
     <script type="module">
-      import { createApp } from "https://unpkg.com/vue@3/dist/vue.esm-browser.js";
+      import {
+        createApp,
+        reactive,
+      } from "https://unpkg.com/vue@3/dist/vue.esm-browser.js";
       const root = {
         template: `
           <nav>
