--- a/Section 3 디렉티브 (Directive)/4. v-on/예제 8. 키보드 수식어.html
+++ b/Section 3 디렉티브 (Directive)/4. v-on/예제 8. 키보드 수식어.html
@@ -9,16 +9,9 @@
       } from "https://unpkg.com/vue@3/dist/vue.esm-browser.js";
       const root = {
         template: `
-          <input @keyup.ctrl.f.exact="
-            key.value = $event.target.value;
-          " />
-          <h2>{{ key.value }}</h2>
+          <input @keyup.shift.f.exact="console.log('눌림')" />
         `,
-        setup() {
-          return {
-            key: reactive({ value: "글자를 입력하세요" }),
-          };
-        },
+        setup() {},
       };
       const app = createApp(root);
       app.mount("#app");
