watch 예제 코드 일부 수정

--- a/Section 4 반응성 (Reactive)/3. watcher/예제 1. 기본 문법.html
+++ b/Section 4 반응성 (Reactive)/3. watcher/예제 1. 기본 문법.html
@@ -17,7 +17,7 @@
           const x = ref(0);
 
           watch(x, () => {
-            console.log(`x가 변했죠~`);
+            console.log("x가 변했습니다", x.value);
           });
 
           return {
