--- a/Section 4 반응성 (Reactive)/3. watcher/예제 5-1. watcher 옵션 - deep.html
+++ b/Section 4 반응성 (Reactive)/3. watcher/예제 5-1. watcher 옵션 - deep.html
@@ -23,13 +23,13 @@
           });
           watch(
             () => people.ine,
-            (newVal) => {
-              console.log("변했습니다.", newVal);
+            () => {
+              console.log("변했습니다.");
             },
             { deep: true }
           );
 
-          people.ine.info.height = 1;
+          people.ine.info.height++;
         },
       };
       const app = createApp(root);
