--- a/Section 4 반응성 (Reactive)/3. watcher/예제 5-2. watcher 옵션 - immediate.html
+++ b/Section 4 반응성 (Reactive)/3. watcher/예제 5-2. watcher 옵션 - immediate.html
@@ -25,8 +25,8 @@
               fetch("https://jsonplaceholder.typicode.com/todos/" + page.value)
                 .then((response) => response.json())
                 .then((json) => (data.value = json));
-            }
-            // { immediate: true }
+            },
+            { immediate: true }
           );
 
           return {
