--- a/Section 4 반응성 (Reactive)/3. watcher/예제 7. stop watch.html
+++ b/Section 4 반응성 (Reactive)/3. watcher/예제 7. stop watch.html
@@ -17,8 +17,9 @@
           const x = ref(0);
 
           const stop = watch(x, () => {
-            console.log(`x가 변했죠~`);
+            console.log("x가 변했습니다", x.value);
           });
+          stop();
 
           return {
             x,
